5DAY-ingress/voting/ingress_resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
#  changed - as it is depracted "kubernetes.io/ingress.class"
spec:
  tls:
  - hosts:
    - "result.whytebatl.com"
    secretName: nginx-tls-default
  rules:
  - host: result.whytebatl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
spec:
  tls:
  - hosts:
    - "vote.whytebatl.com"
    - "www.whytebatl.com"
    secretName: nginx-tls-default
  rules:
  - host: vote.whytebatl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
  - host: www.whytebatl.com
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vote-service
            port:
              number: 80
